# Check-C-Box-ISC

./: CMakeLists.txt  README.md  Readme.md
unsafe_code_goes_in_here/: .Taintedparson.c.swp  Makefile  Readme.md  Tainted.wasm  Tainted_wasm.c  Tainted_wasm.h  Taintedparson.c  Taintedparson.h  Taintedparson.wasm  lib.c  lib.wasm
unsafe_code_goes_in_here/wallet/: Taintedparson.c  Taintedparson.h
wasm_readable_definitions/: Tainted_wasm.c  Tainted_wasm.h  Taintedparson_wasm.c  Taintedparson_wasm.h
